# blog-api

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt  schema.yml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
